[package]
name = "nix-expr"
version = "0.1.0"
edition = "2021"
license = "LGPL-2.1"

[lib]
path = "src/lib.rs"

[dependencies]
anyhow = "1.0"
nix-store = { path = "../nix-store" }
nix-util = { path = "../nix-util" }
nix-c-raw = { path = "../nix-c-raw" }
lazy_static = "1.4"
ctor = "0.2"
tempfile = "3.10"
cstr = "0.2"
