[package]
name = "nix-fetchers"
version = "0.1.0"
edition = "2021"
license = "LGPL-2.1"

[lib]
path = "src/lib.rs"

[dependencies]
anyhow = "1.0.79"
nix-store = { path = "../nix-store" }
nix-util = { path = "../nix-util" }
nix-c-raw = { path = "../nix-c-raw" }
ctor = "0.2.7"
tempfile = "3.10.1"
cstr = "0.2.12"
