[package]
name = "nixops4-eval"
version = "0.1.0"
edition = "2021"
# NOTE: The description gets added to the manual, which renders markdown.
#       Cargo does not want markdown in the description field, so if we were to
#       release to crates.io, we would need to remove this.
description = "Internal child process of [`nixops4`](#nixops4) that performs Nix evaluation"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
nixops4-core = { path = "../nixops4-core" }
nix-expr = { path = "../nix-expr" }
nix-store = { path = "../nix-store" }
nix-util = { path = "../nix-util" }
anyhow = "1.0.81"
tempdir = "0.3.7"
ctor = "0.2.7"
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.115"
base64 = "0.22.1"
cstr = "0.2.12"
tokio = { version = "1.40.0", features = ["io-std", "io-util", "macros", "rt", "rt-multi-thread", "sync"] }
async-trait = "0.1.83"
tracing = "0.1.40"
tracing-tunnel = { version = "0.1.0", features = ["sender"] }
ctrlc = "3.4.5"

[[bin]]
name = "nixops4-eval"
path = "src/main.rs"
