[package]
name = "nixops4-eval"
version = "0.1.0"
edition = "2021"
# NOTE: The description gets added to the manual, which renders markdown.
#       Cargo does not want markdown in the description field, so if we were to
#       release to crates.io, we would need to remove this.
description = "Internal child process of [`nixops4`](#nixops4) that performs Nix evaluation"
license = "LGPL-2.1"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
nixops4-core = { path = "../nixops4-core" }
nix-bindings-expr = "0.2.0"
nix-bindings-fetchers = "0.2.0"
nix-bindings-flake = "0.2.0"
nix-bindings-store = "0.2.0"
nix-bindings-util = "0.2.0"
anyhow = "1.0"
tempfile = "3.21"
ctor = "0.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
base64 = "0.22"
cstr = "0.2"
tokio = { version = "1.40", features = ["io-std", "io-util", "macros", "rt", "rt-multi-thread", "sync"] }
tracing = "0.1"
tracing-tunnel = { git = "https://github.com/roberth/tracing-toolbox", tag = "0.1.99-fork-0", features = ["sender"] }
ctrlc = "3.4"

[[bin]]
name = "nixops4-eval"
path = "src/main.rs"
