[package]
name = "nixops4-resource-runner"
version = "0.1.0"
description = "A command line utility for running NixOps resources without NixOps for testing"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.79"
clap = { version = "4.5.16", features = ["derive"] }
clap-markdown = "0.1.4"
clap_complete = "4.5.24"
clap_derive = "4.5.13"
clap_mangen = "0.2.23"
nixops4-resource = { path = "../nixops4-resource" }
serde = "1.0.209"
serde_json = "1.0.127"
