[package]
name = "nixops4-resource-runner"
version = "0.1.0"
edition = "2021"
# NOTE: The description gets added to the manual, which renders markdown.
#       Cargo does not want markdown in the description field, so if we were to
#       release to crates.io, we would need to remove this.
description = "A utility to run resource providers without expressions, and without `nixops4`, primarily for testing"
license = "LGPL-2.1"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.79"
clap = { version = "4.5.16", features = ["derive"] }
clap_complete = "4.5.24"
clap_derive = "4.5.13"
clap_mangen = "0.2.23"
clap-markdown = "0.1.4"
nixops4-resource = { path = "../nixops4-resource" }
serde = "1.0.209"
serde_json = "1.0.127"
tracing = "0.1.41"

[lib]
path = "src/lib.rs"

[[bin]]
name = "nixops4-resource-runner"
path = "src/main.rs"
