[package]
name = "nixops4-resource"
version = "0.1.0"
description = "A library for the NixOps resource provider interface"
edition = "2021"
license = "LGPL-2.1"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.79"
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.115"
nix = { version = "0.29.0", features = ["fs"] }
chrono = { version = "0.4.41", features = ["serde"] }

[lib]
path = "src/lib.rs"

[build-dependencies]
prettyplease = "0.2.32"
schemars = "0.8.22"
serde_json = "1.0.115"
syn = "2.0.101"
typify = "0.4.1"
