[package]
name = "nixops4-resource"
version = "0.1.0"
description = "A library for the NixOps resource provider interface"
edition = "2021"
license = "LGPL-2.1"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.1"
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
nix = { version = "0.29", features = ["fs"] }
chrono = { version = "0.4", features = ["serde"] }
json-patch = "4.0"
futures-util = "0.3"
jsonrpsee = { version = "0.26.0", features = ["macros", "server-core", "server", "client-core"] }
tokio = { version = "1.45", features = ["rt-multi-thread", "macros", "io-util", "fs"] }
tokio-util = { version = "0.7", features = ["codec"] }

[lib]
path = "src/lib.rs"

[build-dependencies]
prettyplease = "0.2"
schemars = "0.8"
serde_json = "1.0"
syn = "2.0"
typify = "0.4"
