[package]
name = "nixops4-resources-local"
version = "0.1.0"
edition = "2021"
# NOTE: The description gets added to the manual, which renders markdown.
#       Cargo does not want markdown in the description field, so if we were to
#       release to crates.io, we would need to remove this.
description = "A basic NixOps resource provider for local operations. Note that because of their flexibility and local behavior, these resources require extra care to make sure the deployment is reproducible."
license = "LGPL-2.1"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
nixops4-resource = { path = "../nixops4-resource" }
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0" }
json-patch = "4.0"
fd-lock = "4.0"
chrono = "0.4"
tokio = { version = "1.45", features = ["macros", "rt-multi-thread"] }
async-trait = "0.1.89"

[dev-dependencies]
tempfile = { version = "3.17" }

[[bin]]
path = "src/main.rs"
name = "nixops4-resources-local"
