[package]
name = "nixops4-resources-terraform"
version = "0.1.0"
edition = "2021"
description = "Terraform provider adapter for NixOps4. Enables using existing Terraform providers through gRPC protocol translation."
license = "LGPL-2.1"

[dependencies]
nixops4-resource = { path = "../nixops4-resource" }
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0" }
tokio = { version = "1.45", features = ["net", "process"] }
tonic = "0.14"
prost = "0.14"
prost-types = "0.14"
tonic-prost = "0.14"
tower = { version = "0.4", features = ["util"] }
hyper-util = { version = "0.1", features = ["tokio"] }
clap = { version = "4.5", features = ["derive"] }
clap_complete = "4.5"
clap_derive = "4.5"
clap_mangen = "0.2"
clap-markdown = "0.1"
rmp-serde = "1.3.0"

[dev-dependencies]
tempfile = "3.0"

[build-dependencies]
tonic-prost-build = "0.14"

[[bin]]
path = "src/main.rs"
name = "nixops4-resources-terraform"
