[package]
name = "nixops4"
version = "0.1.0"
edition = "2021"
# NOTE: The description gets added to the manual, which renders markdown.
#       Cargo does not want markdown in the description field, so if we were to
#       release to crates.io, we would need to remove this.
description = "The `nixops4` command-line tool"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.79"
nixops4-core = { path = "../nixops4-core" }
# runtime dependency
nixops4-eval = { path = "../nixops4-eval" }
nixops4-resource = { path = "../nixops4-resource" }
nixops4-resource-runner = { path = "../nixops4-resource-runner" }
clap = "4.5.4"
clap_complete = "4.5.29"
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.115"
clap-markdown = "0.1.4"
clap_mangen = "0.2.23"
tracing = "0.1.40"
tracing-tunnel = { version = "0.1.0", features = ["receiver"] }
tracing-subscriber = { version = "0.3.18", features = ["registry"] }
nix = "0.29.0"
crossterm = "0.28.1"
ansi-parser = "0.9.1"
# https://github.com/ratatui/ratatui/pull/1427
ratatui = { git = "https://github.com/ratatui/ratatui", rev = "0bb42842ebbea5adcbfbf2251b66994415355ef1", features = [ "unstable-rendered-line-info" ] }
ctrlc = "3.4.5"

[[bin]]
name = "nixops4"
path = "src/main.rs"
