[package]
name = "nixops4"
version = "0.1.0"
edition = "2021"
# NOTE: The description gets added to the manual, which renders markdown.
#       Cargo does not want markdown in the description field, so if we were to
#       release to crates.io, we would need to remove this.
description = "The `nixops4` command-line tool"
license = "LGPL-2.1"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
nixops4-core = { path = "../nixops4-core" }
# runtime dependency
# nixops4-eval = { path = "../nixops4-eval" }
nixops4-resource = { path = "../nixops4-resource" }
nixops4-resource-runner = { path = "../nixops4-resource-runner" }
clap = "4.5"
clap_complete = "4.5"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
clap-markdown = "0.1"
clap_mangen = "0.2"
tracing = { version = "0.1", features = ["valuable"] }
tracing-tunnel = { git = "https://github.com/roberth/tracing-toolbox", tag = "0.1.99-fork-0", features = ["receiver"] }
tracing-subscriber = { version = "0.3", features = ["registry"] }
nix = "0.29"
crossterm = "0.28"
ansi-parser = "0.9"
ctrlc = "3.4"
tokio = { version = "1.45", features = ["macros", "sync", "test-util"] }
async-trait = "0.1"
pubsub-rs = "0.1"
json-patch = "4.0"
futures = "0.3.31"

[dependencies.ratatui]
version = "0.29"
features = ["unstable-rendered-line-info"]

[[bin]]
name = "nixops4"
path = "src/main.rs"
